Add the tags and classes including text and favicons to the quienes somos section

--- a/index.html
+++ b/index.html
@@ -58,29 +58,64 @@
     <section class="carrusel">
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="Foto llamas en el desierto">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/carousel2.jpg" class="d-block w-100" alt="Foto Moais">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/carousel3.jpg" class="d-block w-100" alt="Foto de Pingüino">
-              </div>
+                <div class="carousel-item active">
+                    <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="Foto llamas en el desierto">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/carousel2.jpg" class="d-block w-100" alt="Foto Moais">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/carousel3.jpg" class="d-block w-100" alt="Foto de Pingüino">
+                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
     </section>
 
     <section id="quienesomos" class="quienes-somos">
-
+        <div class="container">
+            <h2 class="text-center">¿Quienes Somos?</h2>
+            <hr class="separador">
+            <div class="row text px-2">
+                <div class="col-4">
+                    <div class="icono d-flex justify-content-center align-items-center mb-3">
+                        <i class="fas fa-plane fa-lg"></i>
+                    </div>
+                    <p>
+                        Somos una agencia de viajes que busca entregar experiencias únicas a nuestros clientes. Nos
+                        especializamos en viajes por Chile, conociendo cada rincón de nuestro país. Nuestro equipo de
+                        profesionales se encargará de que tu viaje sea inolvidable.
+                    </p>
+                </div>
+                <div class="col-4">
+                    <p>
+                        Contamos con una amplia gama de destinos, desde el norte grande hasta la Patagonia. Nuestros
+                        paquetes incluyen alojamiento, transporte y actividades para que no te preocupes de nada. Solo
+                        relájate y disfruta.
+                    </p>
+                    <div class="icono d-flex justify-content-center align-items-center">
+                        <i class="fas fa-mountain fa-lg"></i>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="icono d-flex justify-content-center align-items-center mb-3">
+                        <i class="fas fa-route fa-lg"></i>
+                    </div>
+                    <p>
+                        Nuestro compromiso es con la calidad y la satisfacción de nuestros clientes. Por eso, trabajamos
+                        con los mejores proveedores y guías turnstiles. Además, estamos disponibles las 24 horas del día
+                        para resolver tus dudas y ayudarte en lo que necesites.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
 
