--- a/index.html
+++ b/index.html
@@ -118,6 +118,56 @@
         </div>
     </section>
 
+    <section id="destacados" class="destacados py-5">
+        <div class="container">
+            <h2 class="text-center">Destacados</h2>
+            <hr class="separador">
+            <div class="row text">
+
+                <div class="col-12 col-md-3 mb-3">
+                    <div class="card">
+                        <img src="./assets/img/card1.jpg" class="card-img-top" alt="Foto de Torres del Paine">
+                        <div class="card-body">
+                            <h5 class="card-title">Zona Austral</h5>       
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-3 mb-3">
+                    <div class="card">
+                        <img src="./assets/img/card2.jpg" class="card-img-top" alt="Foto de Torres del Paine">
+                        <div class="card-body">
+                            <h5 class="card-title">Zona Norte Grande</h5>       
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-3 mb-3">
+                    <div class="card">
+                        <img src="./assets/img/card3.jpg" class="card-img-top" alt="Foto de Torres del Paine">
+                        <div class="card-body">
+                            <h5 class="card-title">Zona Norte Chico</h5>       
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-3 mb-3">
+                    <div class="card">
+                        <img src="./assets/img/card4.jpg" class="card-img-top" alt="Foto de Torres del Paine">
+                        <div class="card-body">
+                            <h5 class="card-title">Zona Sur</h5>       
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+                
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
