Creates the contacto section adding all the tags and bootstrap classes inside it tp give it styles

--- a/index.html
+++ b/index.html
@@ -166,8 +166,27 @@
             </div>
         </div>
     </section>
-    
-                
+
+    <section class="contacto my-3">
+        <div class="container mb-5">
+            <h2 class="text-center">Contacto</h2>
+            <hr class="separador">
+            <div class="container">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="input-nombre" placeholder="Write your name">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+                    <input type="text" class="form-control" id="input-asunto" placeholder="Add the matter">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="input-textArea" rows="3"></textarea>
+                  </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
