--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
                     <div class="card">
                         <img src="./assets/img/card1.jpg" class="card-img-top" alt="Foto de Torres del Paine">
                         <div class="card-body">
-                            <h5 class="card-title">Zona Austral</h5>       
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
+                            <h5 class="card-title">Zona Austral</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -138,9 +139,10 @@
                     <div class="card">
                         <img src="./assets/img/card2.jpg" class="card-img-top" alt="Foto de Torres del Paine">
                         <div class="card-body">
-                            <h5 class="card-title">Zona Norte Grande</h5>       
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
+                            <h5 class="card-title">Zona Norte Grande</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -148,9 +150,10 @@
                     <div class="card">
                         <img src="./assets/img/card3.jpg" class="card-img-top" alt="Foto de Torres del Paine">
                         <div class="card-body">
-                            <h5 class="card-title">Zona Norte Chico</h5>       
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
+                            <h5 class="card-title">Zona Norte Chico</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -158,9 +161,10 @@
                     <div class="card">
                         <img src="./assets/img/card4.jpg" class="card-img-top" alt="Foto de Torres del Paine">
                         <div class="card-body">
-                            <h5 class="card-title">Zona Sur</h5>       
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
+                            <h5 class="card-title">Zona Sur</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -175,18 +179,45 @@
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Nombre</label>
                     <input type="text" class="form-control" id="input-nombre" placeholder="Write your name">
-                  </div>
-                  <div class="mb-3">
+                </div>
+                <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Asunto</label>
                     <input type="text" class="form-control" id="input-asunto" placeholder="Add the matter">
-                  </div>
-                  <div class="mb-3">
+                </div>
+                <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
                     <textarea class="form-control" id="input-textArea" rows="3"></textarea>
-                  </div>
+                </div>
             </div>
         </div>
     </section>
+
+<footer class="footer py-3 mt-3">
+    <div class="container d-flex justify-content-around align-items-center">
+        <h1>VIAJES CHILE</h1>
+        <ul class="redes-sociales">
+            <li>
+                <a href="" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Únetenos en Github!">
+                <i class="fab fa-github-square fa-lg"></i></a>
+            </li>
+            <li>
+                <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Te esperamos en Linkedin!">
+                   <i class="fab fa-linkedin fa-lg"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Síguenos en Twitter!">
+                   <i class="fab fa-twitter-square fa-lg"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Visítanos en Facebook!">
+                   <i class="fab fa-facebook-square fa-lg"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
