Add the display flex to the footer icons and some classes on the css to add margins and colors

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div id="navbarNavDropdown" class="collapse navbar-collapse justify-content-end">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav negro">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
@@ -85,7 +85,7 @@
             <hr class="separador">
             <div class="row text px-2">
                 <div class="col-4">
-                    <div class="icono d-flex justify-content-center align-items-center mb-3">
+                    <div class="icono calipso blanco d-flex justify-content-center align-items-center mb-3">
                         <i class="fas fa-plane fa-lg"></i>
                     </div>
                     <p>
@@ -100,12 +100,12 @@
                         paquetes incluyen alojamiento, transporte y actividades para que no te preocupes de nada. Solo
                         relájate y disfruta.
                     </p>
-                    <div class="icono d-flex justify-content-center align-items-center">
+                    <div class="icono calipso blanco d-flex justify-content-center align-items-center">
                         <i class="fas fa-mountain fa-lg"></i>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="icono d-flex justify-content-center align-items-center mb-3">
+                    <div class="icono calipso blanco d-flex justify-content-center align-items-center mb-3">
                         <i class="fas fa-route fa-lg"></i>
                     </div>
                     <p>
@@ -121,7 +121,7 @@
     <section id="destacados" class="destacados py-5">
         <div class="container">
             <h2 class="text-center">Destacados</h2>
-            <hr class="separador">
+            <hr class="separador calipso">
             <div class="row text">
 
                 <div class="col-12 col-md-3 mb-3">
@@ -192,26 +192,26 @@
         </div>
     </section>
 
-<footer class="footer py-3 mt-3">
+<footer class="footer calipso py-3 mt-3">
     <div class="container d-flex justify-content-around align-items-center">
         <h1>VIAJES CHILE</h1>
         <ul class="redes-sociales">
             <li>
-                <a href="" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Únetenos en Github!">
+                <a target="_blank" href="https://github.com/" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Únetenos en Github!">
                 <i class="fab fa-github-square fa-lg"></i></a>
             </li>
             <li>
-                <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Te esperamos en Linkedin!">
+                <a target="_blank" href="https://cl.linkedin.com/" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Te esperamos en Linkedin!">
                    <i class="fab fa-linkedin fa-lg"></i>
                 </a>
             </li>
             <li>
-                <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Síguenos en Twitter!">
+                <a target="_blank" href="https://twitter.com/" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Síguenos en Twitter!">
                    <i class="fab fa-twitter-square fa-lg"></i>
                 </a>
             </li>
             <li>
-                <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Visítanos en Facebook!">
+                <a target="_blank" href="https://web.facebook.com/" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Visítanos en Facebook!">
                    <i class="fab fa-facebook-square fa-lg"></i>
                 </a>
             </li>
