Add bootstrap classes to fit the styles like the example changing colors and text on the sections

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section id="quienesomos" class="quienes-somos">
         <div class="container">
-            <h2 class="text-center">¿Quienes Somos?</h2>
+            <h2 class="text-center mt-4">¿Quienes Somos?</h2>
             <hr class="separador">
             <div class="row text px-2">
                 <div class="col-4">
@@ -98,7 +98,7 @@
                     <p>
                         Contamos con una amplia gama de destinos, desde el norte grande hasta la Patagonia. Nuestros
                         paquetes incluyen alojamiento, transporte y actividades para que no te preocupes de nada. Solo
-                        relájate y disfruta.
+                        relájate y disfruta, deja en nuestras manos el placer de conocer.
                     </p>
                     <div class="icono calipso blanco d-flex justify-content-center align-items-center">
                         <i class="fas fa-mountain fa-lg"></i>
@@ -118,15 +118,15 @@
         </div>
     </section>
 
-    <section id="destacados" class="destacados py-5">
+    <section id="destacados" class="destacados py-3">
         <div class="container">
             <h2 class="text-center">Destacados</h2>
             <hr class="separador calipso">
             <div class="row text">
 
                 <div class="col-12 col-md-3 mb-3">
-                    <div class="card">
-                        <img src="./assets/img/card1.jpg" class="card-img-top" alt="Foto de Torres del Paine">
+                    <div class="card h-100">
+                        <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="Foto de Torres del Paine">
                         <div class="card-body">
                             <h5 class="card-title">Zona Austral</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -136,10 +136,10 @@
                 </div>
 
                 <div class="col-12 col-md-3 mb-3">
-                    <div class="card">
-                        <img src="./assets/img/card2.jpg" class="card-img-top" alt="Foto de Torres del Paine">
+                    <div class="card h-100">
+                        <img src="./assets/img/card2.jpg" class="card-img-top img-fluid" alt="Foto de Torres del Paine">
                         <div class="card-body">
-                            <h5 class="card-title">Zona Norte Grande</h5>
+                            <h5 class="card-title">Zona N-Grande</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -147,10 +147,10 @@
                 </div>
 
                 <div class="col-12 col-md-3 mb-3">
-                    <div class="card">
-                        <img src="./assets/img/card3.jpg" class="card-img-top" alt="Foto de Torres del Paine">
+                    <div class="card h-100">
+                        <img src="./assets/img/card3.jpg" class="card-img-top img-fluid" alt="Foto de Torres del Paine">
                         <div class="card-body">
-                            <h5 class="card-title">Zona Norte Chico</h5>
+                            <h5 class="card-title">Zona N-Chico</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -158,8 +158,8 @@
                 </div>
 
                 <div class="col-12 col-md-3 mb-3">
-                    <div class="card">
-                        <img src="./assets/img/card4.jpg" class="card-img-top" alt="Foto de Torres del Paine">
+                    <div class="card h-100">
+                        <img src="./assets/img/card4.jpg" class="card-img-top img-fluid" alt="Foto de Torres del Paine">
                         <div class="card-body">
                             <h5 class="card-title">Zona Sur</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -171,7 +171,7 @@
         </div>
     </section>
 
-    <section class="contacto my-3">
+    <section class="contacto my-2">
         <div class="container mb-5">
             <h2 class="text-center">Contacto</h2>
             <hr class="separador">
@@ -193,7 +193,7 @@
     </section>
 
 <footer class="footer calipso py-3 mt-3">
-    <div class="container d-flex justify-content-around align-items-center">
+    <div class="container d-flex justify-content-around align-items-center mt-3">
         <h1>VIAJES CHILE</h1>
         <ul class="redes-sociales">
             <li>
