Add format to the code on html and css

--- a/index.html
+++ b/index.html
@@ -192,32 +192,36 @@
         </div>
     </section>
 
-<footer class="footer calipso py-3 mt-3">
-    <div class="container d-flex justify-content-around align-items-center mt-3">
-        <h1>VIAJES CHILE</h1>
-        <ul class="redes-sociales">
-            <li>
-                <a target="_blank" href="https://github.com/" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Únetenos en Github!">
-                <i class="fab fa-github-square fa-lg"></i></a>
-            </li>
-            <li>
-                <a target="_blank" href="https://cl.linkedin.com/" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Te esperamos en Linkedin!">
-                   <i class="fab fa-linkedin fa-lg"></i>
-                </a>
-            </li>
-            <li>
-                <a target="_blank" href="https://twitter.com/" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Síguenos en Twitter!">
-                   <i class="fab fa-twitter-square fa-lg"></i>
-                </a>
-            </li>
-            <li>
-                <a target="_blank" href="https://web.facebook.com/" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="¡Visítanos en Facebook!">
-                   <i class="fab fa-facebook-square fa-lg"></i>
-                </a>
-            </li>
-        </ul>
-    </div>
-</footer>
+    <footer class="footer calipso py-3 mt-3">
+        <div class="container d-flex justify-content-around align-items-center mt-3">
+            <h1>VIAJES CHILE</h1>
+            <ul class="redes-sociales">
+                <li>
+                    <a target="_blank" href="https://github.com/" data-bs-toggle="tooltip" data-bs-placement="top"
+                        data-bs-custom-class="custom-tooltip" data-bs-title="¡Únetenos en Github!">
+                        <i class="fab fa-github-square fa-lg"></i></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://cl.linkedin.com/" data-bs-toggle="tooltip" data-bs-placement="top"
+                        data-bs-custom-class="custom-tooltip" data-bs-title="¡Te esperamos en Linkedin!">
+                        <i class="fab fa-linkedin fa-lg"></i>
+                    </a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://twitter.com/" data-bs-toggle="tooltip" data-bs-placement="top"
+                        data-bs-custom-class="custom-tooltip" data-bs-title="¡Síguenos en Twitter!">
+                        <i class="fab fa-twitter-square fa-lg"></i>
+                    </a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://web.facebook.com/" data-bs-toggle="tooltip" data-bs-placement="top"
+                        data-bs-custom-class="custom-tooltip" data-bs-title="¡Visítanos en Facebook!">
+                        <i class="fab fa-facebook-square fa-lg"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
