Add the id on every section and in the href on the nav

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
                 <div id="navbarNavDropdown" class="collapse navbar-collapse justify-content-end">
                     <ul class="navbar-nav negro">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="#carrusel">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Quienes Somos</a>
+                            <a class="nav-link" href="#quienesomos">Quienes Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Destacados</a>
+                            <a class="nav-link" href="#destacados">Destacados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="#contacto">Contacto</a>
                         </li>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Inicio</a></li>
-                            <li><a class="dropdown-item" href="#">AQuienes Somos</a></li>
-                            <li><a class="dropdown-item" href="#">Destacados</a></li>
-                            <li><a class="dropdown-item" href="#">Contacto</a></li>
+                            <li><a class="dropdown-item" href="#carrusel">Inicio</a></li>
+                            <li><a class="dropdown-item" href="#quienesomos">Quienes Somos</a></li>
+                            <li><a class="dropdown-item" href="#destacados">Destacados</a></li>
+                            <li><a class="dropdown-item" href="#contacto">Contacto</a></li>
                         </ul>
                     </ul>
                 </div>
@@ -55,7 +55,7 @@
         </div>
     </header>
 
-    <section class="carrusel">
+    <section id="carrusel" class="carrusel">
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -171,7 +171,7 @@
         </div>
     </section>
 
-    <section class="contacto my-2">
+    <section id="contacto" class="contacto my-2">
         <div class="container mb-5">
             <h2 class="text-center">Contacto</h2>
             <hr class="separador">
