Add a modal from bootstrap for the destacados section and use the cards as a buttons to go to the specific modal

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="row text">
 
                 <div class="col-12 col-md-3 mb-3">
-                    <div class="card h-100">
+                    <div class="card h-100" data-bs-toggle="modal" data-bs-target="#modalZonaAustral">
                         <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="Foto de Torres del Paine">
                         <div class="card-body">
                             <h5 class="card-title">Zona Austral</h5>
@@ -222,6 +222,34 @@
             </ul>
         </div>
     </footer>
+
+    <!-- Modales -->
+    <!-- Modal para Zona Austral -->
+    <div id="modalZonaAustral" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-dark" id="exampleModalLabel">Zona austral</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="text-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, unde dicta
+                        vitae velit
+                        nihil repudiandae.</p>
+                    <p class="text-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, unde dicta
+                        vitae velit
+                        nihil repudiandae.</p>
+                    <p class="text-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, unde dicta
+                        vitae velit
+                        nihil repudiandae.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                        aria-label="Close">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
