Add the text-light class and text-light-emphasis to the modal content to have the fwhite fonts

--- a/index.html
+++ b/index.html
@@ -229,20 +229,19 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-dark" id="exampleModalLabe1">Zona Austral</h5>
+                    <h5 class="modal-title light-emphasis" id="exampleModalLabe1">Zona Austral</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p class="text-dark">La Zona Austral abarca las regiones más meridionales del país, incluyendo la
+                    <p class="text-light">La Zona Austral abarca las regiones más meridionales del país, incluyendo la
                         impresionante Patagonia Chilena. Esta área es famosa por sus parques nacionales como Torres del
                         Paine, sus glaciares, y la rica biodiversidad de Tierra del Fuego.</p>
-                    <p class="text-dark">Ideal para los amantes de la naturaleza, ofrece actividades como trekking,
+                    <p class="text-light">Ideal para los amantes de la naturaleza, ofrece actividades como trekking,
                         kayakismo y observación de fauna silvestre, en un entorno de montañas, bosques y ríos de un azul
                         intenso.</p>
-                    <p class="text-dark">La cultura de los pueblos originarios, como los yaganes y selk&apos;nam, junto con
+                    <p class="text-light">La cultura de los pueblos originarios, como los yaganes y selk&apos;nam, junto con
                         la historia de los colonos, enriquece la experiencia en esta remota parte del mundo.</p>
                 </div>
-
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                         aria-label="Close">Close</button>
@@ -257,19 +256,18 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-dark" id="exampleModalLabel2">Zona Norte Grande</h5>
+                    <h5 class="modal-title light-emphasis" id="exampleModalLabel2">Zona Norte Grande</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p class="text-dark">El Norte Grande es conocido por albergar el Desierto de Atacama, el desierto no
+                    <p class="text-light"">El Norte Grande es conocido por albergar el Desierto de Atacama, el desierto no
                         polar más árido del mundo. Esta región invita a explorar paisajes lunares, geisers, salares y
                         cielos estrellados considerados entre los más limpios del planeta.</p>
-                    <p class="text-dark">La ciudad de San Pedro de Atacama sirve como un punto de partida para aventuras
+                    <p class="text-light">La ciudad de San Pedro de Atacama sirve como un punto de partida para aventuras
                         hacia las Lagunas Altiplánicas, el Valle de la Luna, y los géiseres del Tatio.</p>
-                    <p class="text-dark">La influencia de las culturas andinas es palpable en la gastronomía, artesanía
+                    <p class="text-light">La influencia de las culturas andinas es palpable en la gastronomía, artesanía
                         y tradiciones de sus habitantes, ofreciendo una rica experiencia cultural a sus visitantes.</p>
                 </div>
-
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                         aria-label="Close">Close</button>
@@ -284,20 +282,19 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-dark" id="exampleModalLabel3">Zona Norte Chico</h5>
+                    <h5 class="modal-title light-emphasis" id="exampleModalLabel3">Zona Norte Chico</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p class="text-dark">La Zona Norte Chico, situada entre el Norte Grande y la Zona Central, es una
+                    <p class="text-light">La Zona Norte Chico, situada entre el Norte Grande y la Zona Central, es una
                         región de contrastes, donde el desierto se encuentra con el mar y valles fértiles. Es renombrada
                         por sus observatorios astronómicos gracias a los claros cielos.</p>
-                    <p class="text-dark">Los valles transversales, como el Valle del Elqui, son el corazón de la
+                    <p class="text-light">Los valles transversales, como el Valle del Elqui, son el corazón de la
                         producción de pisco chileno y ofrecen excelentes oportunidades para la observación de estrellas,
                         además de albergar pintorescos pueblos y viñedos.</p>
-                    <p class="text-dark">La mezcla de culturas diaguitas, incaicas y coloniales se refleja en la
+                    <p class="text-light">La mezcla de culturas diaguitas, incaicas y coloniales se refleja en la
                         arquitectura y festividades locales, creando un rico tapiz cultural.</p>
                 </div>
-
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                         aria-label="Close">Close</button>
@@ -311,17 +308,17 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-dark" id="exampleModalLabel4">Zona Sur</h5>
+                    <h5 class="modal-title light-emphasis" id="exampleModalLabel4">Zona Sur</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p class="text-dark">La Zona Sur de Chile es famosa por sus extensos bosques, volcanes activos y
+                    <p class="text-light">La Zona Sur de Chile es famosa por sus extensos bosques, volcanes activos y
                         grandes lagos de origen glaciar. La región de los Lagos y la Araucanía son el escenario perfecto
                         para actividades al aire libre como senderismo, pesca deportiva y esquí.</p>
-                    <p class="text-dark">La cultura mapuche, con sus tradiciones, gastronomía y artesanía, juega un
+                    <p class="text-light">La cultura mapuche, con sus tradiciones, gastronomía y artesanía, juega un
                         papel central en la identidad de la región, ofreciendo una experiencia única de encuentro con
                         los pueblos originarios de Chile.</p>
-                    <p class="text-dark">Destacan también la arquitectura alemana en ciudades como Puerto Varas y
+                    <p class="text-light">Destacan también la arquitectura alemana en ciudades como Puerto Varas y
                         Frutillar, añadiendo un encanto particular a esta hermosa región.</p>
                 </div>
                 <div class="modal-footer">
