Add the colors to the modal and add format to the documents

--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
                     <p class="text-light">Ideal para los amantes de la naturaleza, ofrece actividades como trekking,
                         kayakismo y observación de fauna silvestre, en un entorno de montañas, bosques y ríos de un azul
                         intenso.</p>
-                    <p class="text-light">La cultura de los pueblos originarios, como los yaganes y selk&apos;nam, junto con
-                        la historia de los colonos, enriquece la experiencia en esta remota parte del mundo.</p>
+                    <p class="text-light">La cultura de los pueblos originarios, como los yaganes y selk&apos;nam, junto
+                        con la historia de los colonos, enriquece la experiencia en esta remota parte del mundo.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
@@ -260,11 +260,11 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p class="text-light"">El Norte Grande es conocido por albergar el Desierto de Atacama, el desierto no
+                    <p class="text-light">El Norte Grande es conocido por albergar el Desierto de Atacama, el desierto no
                         polar más árido del mundo. Esta región invita a explorar paisajes lunares, geisers, salares y
                         cielos estrellados considerados entre los más limpios del planeta.</p>
-                    <p class="text-light">La ciudad de San Pedro de Atacama sirve como un punto de partida para aventuras
-                        hacia las Lagunas Altiplánicas, el Valle de la Luna, y los géiseres del Tatio.</p>
+                    <p class=" text-light">La ciudad de San Pedro de Atacama sirve como un punto de partida para
+                        aventuras hacia las Lagunas Altiplánicas, el Valle de la Luna, y los géiseres del Tatio.</p>
                     <p class="text-light">La influencia de las culturas andinas es palpable en la gastronomía, artesanía
                         y tradiciones de sus habitantes, ofreciendo una rica experiencia cultural a sus visitantes.</p>
                 </div>
