Add the class dark to the close button on the modals

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         con la historia de los colonos, enriquece la experiencia en esta remota parte del mundo.</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                    <button type="button" class="btn btn-dark" data-bs-dismiss="modal"
                         aria-label="Close">Close</button>
                 </div>
             </div>
@@ -269,7 +269,7 @@
                         y tradiciones de sus habitantes, ofreciendo una rica experiencia cultural a sus visitantes.</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                    <button type="button" class="btn btn-dark" data-bs-dismiss="modal"
                         aria-label="Close">Close</button>
                 </div>
             </div>
@@ -296,7 +296,7 @@
                         arquitectura y festividades locales, creando un rico tapiz cultural.</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                    <button type="button" class="btn btn-dark" data-bs-dismiss="modal"
                         aria-label="Close">Close</button>
                 </div>
             </div>
@@ -322,7 +322,7 @@
                         Frutillar, añadiendo un encanto particular a esta hermosa región.</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                    <button type="button" class="btn btn-dark" data-bs-dismiss="modal"
                         aria-label="Close">Close</button>
                 </div>
             </div>
