Add the classes d-none and d-md-block to the quienesomos section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
     </section>
 
-    <section id="quienesomos" class="quienes-somos">
+    <section id="quienesomos" class="quienes-somos d-none d-md-block">
         <div class="container">
             <h2 class="text-center mt-4">¿Quienes Somos?</h2>
             <hr class="separador">
