Change the idiom of the place holder on the contacto section

--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
             <div class="container">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="input-nombre" placeholder="Write your name">
+                    <input type="text" class="form-control" id="input-nombre" placeholder="Escribe tu nombre">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Asunto</label>
-                    <input type="text" class="form-control" id="input-asunto" placeholder="Add the matter">
+                    <input type="text" class="form-control" id="input-asunto" placeholder="Añade el asunto">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
